--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "lucide-react": "^0.553.0",
     "msw": "^2.12.1",
     "next": "16.0.3",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "shadcn": "^3.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
