--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "msw": "^2.12.1",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
